08-kub-ingressRoute-provider-basic/vault-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  namespace: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      containers:
      - name: vault
        image: hashicorp/vault:latest
        args:
        - "server"
        - "-dev"
        ports:
        - containerPort: 8200
